--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 @import url(http://fonts.googleapis.com/css?family=Clicker+Script); /* font-family: 'Clicker Script', cursive; */
 
 /* scale all images, and media to accomodate responsive layout. */
-img, video, audio, iframe, table, form { 
+img, video, audio, iframe, table, form {
   width:100%; /* IE */
   max-width: 100%; /* FF, Safari, Chrome */
 }
@@ -135,15 +135,15 @@ iframe {
 }
 
 .col-1 {
-  
+  width: 30%;
 }
 
 .col-2 {
-  
+  width: 64%;
 }
 
 .col-3 {
-  
+  width: 94%;
 }
 
 /********** Header **********/
