--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,6 @@ iframe {
 
 .col-1 {
   width: 30%;
-  float: right;
 }
 
 .col-2 {
@@ -146,6 +145,10 @@ iframe {
 
 .col-3 {
   width: 94%;
+}
+
+.shoes {
+  float: right;
 }
 
 /********** Header **********/
