automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,18 @@ iframe {
   float: right;
 }
 
+.left {
+  float: left;
+
+}
+
+.mid {
+  
+}
+
+.right {
+  float: right;
+}
 /********** Header **********/
 
 /********** Nav Bar **********/
