automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -156,8 +156,10 @@ iframe {
 
 }
 
-.clearfix {
-  overflow: auto;
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
 }
 
 .right {
