--- a/css/style.css
+++ b/css/style.css
@@ -137,11 +137,14 @@ iframe {
 
 .col-1 {
   width: 25%;
+  padding: 10px;
 }
 
 .col-2 {
   width: 60%;
   float: left;
+  padding: 10px;
+
 }
 
 .col-3 {
