--- a/css/style.css
+++ b/css/style.css
@@ -137,13 +137,13 @@ iframe {
 
 .col-1 {
   width: 25%;
-  padding: 10px;
+  margin: 10px;
 }
 
 .col-2 {
   width: 60%;
   float: left;
-  padding: 10px;
+  margin: 10px;
 
 }
 
