--- a/css/style.css
+++ b/css/style.css
@@ -158,9 +158,12 @@ iframe {
 }
 
 .clearfix:after {
-    content: "";
-    clear: both;
-    display: table;
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  height: 0;
+  line-height: 0;
 }
 
 .right {
