--- a/css/layout.css
+++ b/css/layout.css
@@ -31,3 +31,18 @@
 [class*="col-"]:first-child {
   margin-left: 0;
 }
+
+
+  .row {
+    clear: both;
+    margin-bottom: 2%;
+  }
+
+  .row:after {
+    content: ".";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    height: 0;
+    line-height: 0;
+  }
