--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,40 @@ iframe {
   height: 415px;
 }
 
+.col-1 {
+  width: 32%;
+}
+
+.col-2 {
+  width: 60%;
+  float: left;
+}
+
+.col-3 {
+  width: 94%;
+}
+
+.shoes {
+  float: right;
+}
+
+.left {
+  float: left;
+
+}
+
+.clearfix:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  height: 0;
+  line-height: 0;
+}
+
+.right {
+  float: right;
+}
 /********** Header **********/
 
 /********** Nav Bar **********/
@@ -301,6 +335,5 @@ footer a {
   color: #555;
   text-decoration: underline;
 }
-
 
 /* code examples copyright Jonathan Grover 2012 */
